[tool.poetry]
name = "pslib"
version = "0.0.0"
description = "A python library for interacting with Pokémon Showdown"
authors = ["Valentin Berlier <berlier.v@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6.2"
websockets = "^8.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
rope = "^0.16.0"
pylint = "^2.4.4"
pytest = "^5.4.1"
pytest-asyncio = "^0.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
